--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </div>
 
     <div class="signup-form">
-        <div>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</div>
-        <div>Sign up <em>now</em> to get started.</div>
+        <div class="header">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</div>
+        <div class="header">Sign up <em>now</em> to get started.</div>
 
-        <p>You <em>know</em> you want to.</p>
+        <p class="header">You <em>know</em> you want to.</p>
         
         <form action="">
-            <p>Let's do this!</p>
+            <p class="header">Let's do this!</p>
 
             <div>
                 <label for="first-name">First name</label>
